<resources>
    <string name="app_name">Kvik</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="kaushalya_vikas_kendra">Kaushalya Vikas Kendra</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="about_us">About us</string>
    <string name="vision">Vision</string>
    <string name="mission">Mission</string>
    <string name="training_programs">Training Programs</string>
    <string name="events">Events</string>
    <string name="sign_up">Sign up</string>
    <string name="contact_us">Contact us</string>
    <string name="home_screen">Home Screen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Home page</string>
    <string name="support_kvik">Support Kvik</string>
    <string name="trainers_required">Trainers required</string>
    <string name="training_program">Training Program</string>
    <string name="home">Home</string>
    <string name="contact_activity">Contact activity</string>
    <string name="events_activity">Events activity</string>
    <string name="support_activity">Support activity</string>
    <string name="button">Call us</string>
    <string name="button1">Email us</string>
    <string name="about_kvik"><u>About Kvik</u></string>
    <string name="cost_effective_and_high_quality_training_n">Cost Effective and High Quality Training</string>
    <string name="social_objective_n">Social Objective</string>
    <string name="string_social_objective_n" />
    <string name="call_us">Call us</string>
    <string name="email_us">Email us</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="follow_us">follow us</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_mission">MissionActivity</string>
    <string name="title_activity_vision">VisionActivity</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_trainint_metho">TrainintMethoActivity</string>
    <string name="title_activity_training_schectivity">TrainingSchectivity</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_trainer_req">TrainerReqActivity</string>
    <string name="title_activity_support">SupportActivity</string>
    <string name="title_activity_enter_your_details">EnterYourDetailsActivity</string>
    <string name="title_activity_number_verify">NumberVerifyActivity</string>
    <string name="title_activity_otp_verify">OtpVerifyActivity</string>
    <string name="title_activity_course_details">CourseDetailsActivity</string>
    <string name="title_activity_trainer_details">TrainerDetails</string>
    <string name="title_activity_upload_file">Upload_file</string>
    <string name="apply">tApply</string>
    <string name="become_a_student">Become A Student</string>
    <string name="name">Name..</string>
    <string name="education">Education..</string>
    <string name="age">Age..</string>
    <string name="email">Email..</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="previous_events">Previous Events</string>
</resources>
