<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.abdelkerim.kvik.NumberVerifyActivity"
    tools:showIn="@layout/activity_number_verify">
    <EditText
        android:id="@+id/enterno_editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:layout_marginRight="10dp"
        android:layout_weight=".9"
        android:padding="7dp"
        android:ems="20"
        android:textColorHint="@android:color/darker_gray"
        android:background="@drawable/outline"
        android:hint="Enter your Phone number"
        android:inputType="number"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/sendotp_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="25dp"
        android:layout_weight=".9"
        android:onClick="send_sms"
        android:background="@drawable/outline"
        android:text="@string/send_otp"
        android:textSize="22sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/enter_otp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight=".9"
        android:padding="7dp"
        android:textSize="20sp"
        android:background="@drawable/outline"
        android:textColorHint="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/enter_otp"
        android:inputType="number"
        />

    <Button
        android:id="@+id/verify_otp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="25dp"
        android:layout_weight=".9"
        android:padding="7dp"
        android:text="@string/verify"
        android:textSize="22sp"
        android:textStyle="bold"
        android:onClick="verify_otp"
        android:enabled="false"
        android:background="@drawable/outline"/>

    <TextView
        android:id="@+id/errortextview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:padding="7dp"
        android:text="Wrong OTP"
        android:textSize="18dp"
        android:visibility="gone"
        tools:ignore="HardcodedText,SpUsage" />

</LinearLayout>
